--- a/WhackAQuack/app/build.gradle
+++ b/WhackAQuack/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -43,4 +44,11 @@ dependencies {
     //implementation 'com.google.android.gms:play-services-cronet:16.0.0'
     //https://github.com/amitshekhariitbhu/Fast-Android-Networking
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
+
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:26.8.0')
+
+    // Declare the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth'
 }
