--- a/WhackAQuack/app/src/main/AndroidManifest.xml
+++ b/WhackAQuack/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="njit.mt.whackaquack">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,14 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WhackAQuack">
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/app_name">
+            android:name=".ui.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.WhackAQuack.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--<activity
+            android:name=".ui.LoginActivity"
+            android:label="@string/app_name">
+
+        </activity>-->
     </application>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
 </manifest>
