--- a/WhackAQuack/app/src/main/AndroidManifest.xml
+++ b/WhackAQuack/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:imeOptions="actionDone"
         android:theme="@style/Theme.WhackAQuack">
         <activity
             android:name=".ui.MainActivity"
